crates/rtb-app/tests/trybuild/metadata_requires_name.stderr
error[E0277]: the member `bon::__::Unset<metadata::tool_metadata_builder::members::name>` was not set, but this method requires it to be set
 --> tests/trybuild/metadata_requires_name.rs:9:63
  |
9 |     let _ = ToolMetadata::builder().summary("only a summary").build();
  |                                                               ^^^^^ the member `bon::__::Unset<metadata::tool_metadata_builder::members::name>` was not set, but this method requires it to be set
  |
  = help: the trait `bon::builder_state::IsSet` is not implemented for `bon::__::Unset<metadata::tool_metadata_builder::members::name>`
help: the trait `bon::builder_state::IsSet` is implemented for `bon::__::Set<Name>`
 --> $CARGO/bon-$VERSION/src/builder_state.rs
  |
  | impl<Name> IsSet for Set<Name> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: required for `metadata::tool_metadata_builder::SetSummary` to implement `metadata::tool_metadata_builder::IsComplete`
note: required by a bound in `ToolMetadataBuilder::<S>::build`
 --> src/metadata.rs
  |
  | #[derive(Debug, Clone, Serialize, Deserialize, bon::Builder)]
  |                                                ^^^^^^^^^^^^ required by this bound in `ToolMetadataBuilder::<S>::build`
...
  | pub struct ToolMetadata {
  |            ------------ required by a bound in this associated function
  = note: this error originates in the derive macro `bon::Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
